--- a/.env.test
+++ b/.env.test
@@ -1,2 +1,4 @@
 # define your env variables for the test env here
+KERNEL_CLASS='App\Kernel'
+APP_SECRET='$ecretf0rt3st'
 DATABASE_URL="postgresql://app_test:PfoAd101@database:5432/app?serverVersion=15&charset=utf8"
